package structural.decorator.anvatkimchi;

public interface Product {
    double totalPrice();
    String showProduct();

}
